[package]
name = "rayforce-realtime"
version = "0.1.0"
edition = "2021"
description = "Transport-agnostic query subscriptions: dependency tracking, invalidation matching, delivery-time auth filtering. Pair with SSE/WebSocket adapters in app code."
license = "MIT"

[dependencies]
ray-datom = { git = "https://github.com/theaspirational/ray-datom.git", rev = "330664d476e3e309afe7bfec03b5bfaf75a76c97" }
ray-transactor = { git = "https://github.com/theaspirational/ray-transactor.git", rev = "7dce675784c1bd51121dbd8f127dc1648edb9a24" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
